# NutBooks

./: .gitignore  .gitmessage.txt  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: HOTFIX.md  chore.md  comment.md  design.md  help.md  refactor.md  remove.md  rename.md  style.md  test.md
.github/workflows/: go.yml
api/: .air.toml  .infisical.json  go.mod  go.sum  main.go  pyproject.toml
api/docs/: api.rst  conf.py  docs.go  index.rst
api/router/: root.go
api_go/: docker-compose.yml  go.mod  main.go
api_go/cmd/: root.go
api_go/router/: root.go
backend/: .air.toml  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  go.mod  go.sum  main.go
backend/api/: go.sum
backend/api/docs/: swagger.json
backend/app/: root.go  root_test.go
backend/app/controllers/: auth.go  auth_test.go  bookmark.go  bookmark_test.go  controllers_test.go  user.go  user_test.go
backend/app/middlewares/: cors_middleware.go  fiber_middleware.go  jwt_middleware.go
backend/app/routes/: public_route.go  swagger_route.go
backend/app/utils/: validator.go
backend/cmd/: root.go
backend/configs/: config.go  fiber_config.go  traefik.yml
backend/db/: connection.go  migrate.go
backend/db/crud/: auth.go  bookmark.go  user.go
backend/docs/: docs.go  swagger.json  swagger.yaml
backend/frontend/: package-lock.json
backend/router/: root.go
front/: .eslintrc.json  jest.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
front/__tests__/: index.test.tsx
frontend/: package.json
(+31 files in other folders)
