[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["cheesecat47 <cheesecat47@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.0"
pydantic = {extras = ["dotenv"], version = "^1.10.8"}
requests = "^2.31.0"
sphinx = "^7.0.1"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
